# seL4testcase-MR-MC

./: CMakeLists.txt  README.md  default.xml  easy-settings.cmake  settings.cmake
test/: CMakeLists.txt  mce.c
